# Trustpilot-Value-Proposition

./: app.py  main.py  openai_summarizer.py  pyproject.toml  summarizer.py  trustpilot_scraper.py
static/: script.js  thankyou.js
static/css/: style.css
templates/: index.html  thankyou.html
